syntax = "proto3";
option java_package = "hr.fer.masters_thesis.marko_tunjic.masters_thesis_api.grpc";

service Generator {
  rpc GenerateProject (GenerationRequestMessage) returns (GenerationReply);
  rpc GetAvailableTables (GrpcDatabaseConnectionData) returns (AvailableTablesReply);
}

message GenerationRequestMessage {
  string solutionName = 1;
  string projectName = 2;
  bool cascade = 3;
  GrpcDatabaseConnectionData databaseConnectionData = 4;
  repeated string architectures = 5;
  repeated string includedTables = 6;
}

message GrpcDatabaseConnectionData {
  string databaseName = 1;
  string databaseServer = 2;
  string databasePort = 3;
  string databaseUid = 4;
  string databasePwd = 5;
  string provider = 6;
}

message GenerationReply {
  bytes zip = 1;
}

message AvailableTablesReply {
  repeated string availableTables = 1;
}
